# voice-rtc

./: README.md
libwrapper/: CMakeLists.txt  Makefile  README.md  audio_sink.h  create_session_observer.cpp  create_session_observer.h  data_channel_observer.cpp  data_channel_observer.h  peer_connection_observer.cpp  peer_connection_observer.h  set_session_observer.h  wrapper.cpp  wrapper.h
libwrapper/cmake/: FindLibWebRTC.cmake  LinuxClang.cmake
libwrapper/video/: README.md  graph.f.glsl  graph.v.glsl  graph2.v.glsl  ref_counted_base.h  refptr.h  shader_utils.cpp  shader_utils.h  track_source.cpp  track_source.h
server/: CMakeLists.txt  Makefile  README.md  main.cpp
server/cmake/: FindFilesystem.cmake
server/html/: client.css  client.html  client.js
server/inference/: README.md
server/inference/common/: CMakeLists.txt  DefaultMemoryManager.cpp
server/inference/decoder/: CMakeLists.txt  Decoder.h
server/inference/module/: CMakeLists.txt
server/inference/module/feature/: CMakeLists.txt
server/inference/module/nn/: CMakeLists.txt  Makefile  nn.h
server/inference/module/nn/backend/fbgemm/: CMakeLists.txt
